@@ -347,6 +347,13 @@ void test_CisTrans2()
 
 int main() 
 {
+  // Define location of file formats for testing
+  #ifdef FORMATDIR
+    char env[BUFF_SIZE];
+    snprintf(env, BUFF_SIZE, "BABEL_LIBDIR=%s", FORMATDIR);
+    putenv(env);
+  #endif
+
   test_GetType();
   test_configStruct();
   test_IsValid();
