@@ -158,6 +158,13 @@ void test_noStereo(const std::string &file)
 
 int main()
 {
+  // Define location of file formats for testing
+  #ifdef FORMATDIR
+    char env[BUFF_SIZE];
+    snprintf(env, BUFF_SIZE, "BABEL_LIBDIR=%s", FORMATDIR);
+    putenv(env);
+  #endif
+
   // There are several cases to test:
 
   //////////////////////////////////////////////////////////////////////////////
